examples/gatekeeper/duplicate-updates-s3/samples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: RequireS3
metadata:
  name: crossplane-s3
spec:
  match:
    kinds:
      - apiGroups: ["awsblueprints.io"]
        kinds: ["ObjectStorage"]
      - apiGroups: ["s3.aws.crossplane.io"]
        kinds: ["Bucket"]
